--- a/.github/workflows/gradle-dependency-submission.yaml
+++ b/.github/workflows/gradle-dependency-submission.yaml
@@ -3,8 +3,6 @@ name: Dependency Submission
 on:
   push:
     branches: [ 'main' ]
-  pull_request:
-    branches: [ 'main' ]
 
 permissions:
   contents: write
@@ -19,5 +17,7 @@ jobs:
           java-version: 21
           distribution: temurin
 
+      # Generates and submits a dependency graph, enabling Dependabot Alerts for all project dependencies.
+      # See: https://github.com/gradle/actions/blob/main/dependency-submission/README.md
       - name: Generate and submit dependency graph
         uses: gradle/actions/dependency-submission@v4
