--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -7,16 +7,16 @@ on:
     paths: [ src/** ]
     types: [ opened, synchronize ]
 
-permissions:
-  pull-requests: write
-
 jobs:
   build-and-test:
-    runs-on: ubuntu-latest
+    timeout-minutes: 5
+    runs-on: ubuntu-22.04
+    permissions:
+      pull-requests: write
     steps:
-      - uses: actions/checkout@v4
+      - uses: actions/checkout@eef61447b9ff4aafe5dcd4e0bbf5d482be7e7871 #v4
       - name: Set up JDK 21
-        uses: actions/setup-java@v4
+        uses: actions/setup-java@b36c23c0d998641eff861008f374ee103c25ac73 #v4
         with:
           java-version: '21'
           distribution: 'temurin'
@@ -24,16 +24,16 @@ jobs:
       # Configure Gradle for optimal use in GitHub Actions, including caching of downloaded dependencies.
       # See: https://github.com/gradle/actions/blob/main/setup-gradle/README.md
       - name: Setup Gradle
-        uses: gradle/actions/setup-gradle@v4
+        uses: gradle/actions/setup-gradle@d156388eb19639ec20ade50009f3d199ce1e2808 #v4
 
-      - name: Build with Gradle Wrapper
-        run: ./gradlew build
+      - name: Build and Test with Gradle Wrapper
+        run: ./gradlew check bootJar
 
       - name: Test Coverage
         id: jacoco
-        uses: madrapps/jacoco-report@v1.7.1
+        uses: madrapps/jacoco-report@e4bbaf00a0b8920cb86a448ae3ec0fc6f6bfeacc #v1.7.1
         with:
-          paths: ${{ github.workspace }}/build/reports/jacoco/*.xml
+          paths: ${{ github.workspace }}/build/reports/jacoco/jacocoTestReport.xml
           token: ${{ secrets.GITHUB_TOKEN }}
           title: Coverage Report
           update-comment: true
@@ -41,3 +41,13 @@ jobs:
           skip-if-no-changes: true
           pass-emoji: ':green_circle:'
           fail-emoji: ':red_circle:'
+      - name: Upload Artifact
+        uses: actions/upload-artifact@v4
+        with:
+          path: .
+          name: 'malanka-coffee'
+          if-no-files-found: 'error'
+          retention-days: 7
+  docker-build-check:
+    needs: [build-and-test]
+    uses: ./.github/workflows/docker-build-check.yaml
