--- a/.github/workflows/gradle-dependency-review.yaml
+++ b/.github/workflows/gradle-dependency-review.yaml
@@ -9,16 +9,17 @@ permissions:
 
 jobs:
   dependency-review:
-    runs-on: ubuntu-latest
+    timeout-minutes: 5
+    runs-on: ubuntu-22.04
     steps:
-      - uses: actions/checkout@v4
-      - uses: actions/setup-java@v4
+      - uses: actions/checkout@eef61447b9ff4aafe5dcd4e0bbf5d482be7e7871 #v4
+      - uses: actions/setup-java@b36c23c0d998641eff861008f374ee103c25ac73 #v4
         with:
           java-version: 21
           distribution: temurin
 
       - name: Generate and submit dependency graph
-        uses: gradle/actions/dependency-submission@v4
+        uses: gradle/actions/dependency-submission@d156388eb19639ec20ade50009f3d199ce1e2808 #v4
 
       - name: Perform dependency review
-        uses: actions/dependency-review-action@v4
+        uses: actions/dependency-review-action@5a2ce3f5b92ee19cbb1541a4984c76d921601d7c #v4
