--- a/.github/workflows/gradle-dependency-submission.yaml
+++ b/.github/workflows/gradle-dependency-submission.yaml
@@ -9,10 +9,11 @@ permissions:
 
 jobs:
   dependency-submission:
-    runs-on: ubuntu-latest
+    timeout-minutes: 5
+    runs-on: ubuntu-22.04
     steps:
-      - uses: actions/checkout@v4
-      - uses: actions/setup-java@v4
+      - uses: actions/checkout@eef61447b9ff4aafe5dcd4e0bbf5d482be7e7871 #v4
+      - uses: actions/setup-java@b36c23c0d998641eff861008f374ee103c25ac73 #v4
         with:
           java-version: 21
           distribution: temurin
@@ -20,4 +21,4 @@ jobs:
       # Generates and submits a dependency graph, enabling Dependabot Alerts for all project dependencies.
       # See: https://github.com/gradle/actions/blob/main/dependency-submission/README.md
       - name: Generate and submit dependency graph
-        uses: gradle/actions/dependency-submission@v4
+        uses: gradle/actions/dependency-submission@d156388eb19639ec20ade50009f3d199ce1e2808 #v4
