--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -2,8 +2,11 @@
 name: CI
 
 on:
-  workflow_call: { }
-  workflow_dispatch: { }
+  push:
+    branches: [ 'main' ]
+  pull_request:
+    paths: [ src/** ]
+    types: [ opened, synchronize ]
 
 jobs:
   build:
@@ -67,6 +70,8 @@ jobs:
     timeout-minutes: 5
     runs-on: [ ubuntu-22.04 ]
     needs: [ test ]
+    permissions:
+      pull-requests: write
     if: github.event_name == 'pull_request'
     steps:
       - name: Download Artifact
@@ -88,7 +93,7 @@ jobs:
           fail-emoji: ':red_circle:'
 
   dockerfile-build:
-    needs: [ build, test ]
+    needs: [ build ]
     timeout-minutes: 5
     runs-on: ubuntu-22.04
     steps:
@@ -106,9 +111,6 @@ jobs:
           context: .
           tags: ${{ github.event.repository.name }}
           outputs: type=docker,dest=/tmp/${{ github.event.repository.name }}.tar
-
-      - name: Inspect Image
-        run: docker image inspect ${{ github.event.repository.name }}:latest
 
       - name: Upload Docker Image
         uses: actions/upload-artifact@v4
