--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -20,6 +20,10 @@ jobs:
           java-version: '21'
           distribution: 'temurin'
 
+      - run: |
+          ls -la
+          ls -ls .github/
+
       # Configure Gradle for optimal use in GitHub Actions, including caching of downloaded dependencies.
       # See: https://github.com/gradle/actions/blob/main/setup-gradle/README.md
       - name: Setup Gradle
@@ -67,6 +71,7 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           path: .
+          include-hidden-files: true
           overwrite: 'true'
           name: ${{ github.event.repository.name }}
           if-no-files-found: 'error'
@@ -83,6 +88,16 @@ jobs:
         uses: actions/download-artifact@v4
         with:
           name: ${{ github.event.repository.name }}
+
+      - name: Validate codecov.yml
+        run: |
+          response=$(curl --write-out "%{http_code}" --silent --output /dev/null --data-binary @.github/codecov.yml https://codecov.io/validate)
+          if [ "$response" -eq 200 ]; then
+            echo "Success: Status code 200"
+          else
+            echo "Failed: Status code $response"
+            exit 1
+          fi
 
       - name: Upload coverage to Codecov
         uses: codecov/codecov-action@v4
