--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -89,15 +89,22 @@ jobs:
         with:
           name: ${{ github.event.repository.name }}
 
+
       - name: Validate codecov.yml
         run: |
-          response=$(curl --write-out "%{http_code}" --silent --output /dev/null --data-binary @.github/codecov.yml https://codecov.io/validate)
-          if [ "$response" -eq 200 ]; then
-            echo "Success: Status code 200"
-          else
-            echo "Failed: Status code $response"
-            exit 1
-          fi
+          response=$(curl --write-out "%{http_code}" --silent --output - --data-binary @.github/codecov.yml https://codecov.io/validate)
+            http_code=$(echo "$response" | tail -n1)
+            body=$(echo "$response" | sed '$d')
+
+            echo "Response body:"
+            echo "$body"
+            
+            if [ "$http_code" -eq 200 ]; then
+              echo "Success: Status code 200"
+            else
+              echo "Failed: Status code $http_code"
+              exit 1
+            fi
 
       - name: Upload coverage to Codecov
         uses: codecov/codecov-action@v4
